--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Ukenummer | Tema\n",
     "---|---\n",
-    "3 | [Introduksjon](01_Introduksjon.ipynb"
+    "3 | [Introduksjon](01_Introduksjon.ipynb)"
    ]
   }
  ],
