--- a/02_Intro til Python.ipynb
+++ b/02_Intro til Python.ipynb
@@ -33,7 +33,8 @@
     "* Oppfriskning python syntaks og operatorer\n",
     "* Lister\n",
     "* Numpy ndarray\n",
-    "* Innebygde funksjoner i numpy\n"
+    "* Innebygde funksjoner i numpy\n",
+    "* Plotting med Matplotlib\n"
    ]
   },
   {
@@ -55,19 +56,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40320\n"
+     ]
+    }
+   ],
    "source": [
     "def factorial(x):\n",
     "    y = 1\n",
     "    for i in range(x, 0, -1):\n",
     "        y *= i\n",
     "    return y\n",
+    "\n",
     "\n",
     "print(factorial(8))"
    ]
@@ -189,14 +199,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 'epler', 'veier', 3.4, 'kg']\n",
+      "5\n",
+      "[9, 'epler', 'veier', 3.4, 'kg', 'appelsiner']\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [9, 'epler', 'veier', 3.4, 'kg']\n",
+    "print(liste)\n",
+    "print(len(liste))\n",
+    "liste.append('appelsiner')\n",
+    "print(liste)\n",
+    "print(len(liste))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,14 +255,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "x = list(range(0, 50, 1))\n",
+    "\n",
+    "y = [i**0.5 for i in x]\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -251,13 +283,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4]\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "x = [1, 2, 3, 4]\n",
     "y = x*6 # Repetisjon av listen x\n",
@@ -301,13 +342,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Liste:  [6, 3, 3, 7, 8, 1, 1, 6, 1, 8]\n",
+      "verdien i posisjon 3 er:  7\n",
+      "Listen er nå:  [6, 3, 3, 12, 8, 1, 1, 6, 1, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randint\n",
     "liste = [randint(0, 9) for i in range(10)]\n",
@@ -339,16 +390,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
    "source": [
     "xList = list(range(0, 21))\n",
-    "yList = xList[:]\n",
+    "yList = xList[10::2]\n",
     "print(yList)"
    ]
   },
@@ -368,17 +427,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "def reverser(liste):\n",
     "    #--------------------\n",
-    "    # Skriv noe her\n",
+    "    nyListe = liste[::-1]\n",
     "    #--------------------\n",
     "    return nyListe\n",
     "\n",
@@ -443,7 +510,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Å opprette en array\n",
     "* Begynn med å importere modulen:\n",
@@ -475,9 +546,9 @@
     "* Returnert array er tall i rekkefølge f.o.m. `start`, med intervall `step` mellom hver verdi helt til man når max-verdien `stop`. Siste verdi i array vil være mindre enn `stop`\n",
     "* Eksempel på kjøring:\n",
     "```python\n",
-    "np.arange(10,2,-1)\n",
+    "np.arange(10,2,-2)\n",
     "```\n",
-    "    Gir `[10, 8, 6, 4]`\n",
+    "    Gir `array([10, 8, 6, 4])`\n",
     "    \n"
    ]
   },
@@ -516,14 +587,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  4  8 16]\n",
+      "[ 1  2  4  8 16]\n",
+      "[ 1.  2.  4.  8. 16.]\n",
+      "[ 1.  2.  4.  8. 16.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Ulike måter å generere en eksponentiell array\n",
+    "listA = np.array([1, 2, 4, 8, 16])\n",
+    "print(listA)\n",
+    "\n",
+    "listB = 2**np.arange(0, 5)\n",
+    "print(listB)\n",
+    "\n",
+    "listC = 2**np.linspace(0, 4, 5)\n",
+    "print(listC)\n",
+    "\n",
+    "listD = np.logspace(0, 4, 5, base=2)\n",
+    "print(listD)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -564,14 +661,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1   2   4   8  16  32  64 128 256 512]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = np.arange(0, 10)\n",
+    "x_n = 2**n\n",
+    "\n",
+    "print(x_n)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -611,14 +721,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 21.        19.666176  18.307008  16.925952  15.526464  14.112\n",
+      "  12.686016  11.251968   9.813312   8.373504   6.936      5.504256\n",
+      "   4.081728   2.671872   1.278144  -0.096     -1.447104  -2.771712\n",
+      "  -4.066368  -5.327616  -6.552     -7.736064  -8.876352  -9.969408\n",
+      " -11.011776 -12.       -12.930624 -13.800192 -14.605248 -15.342336\n",
+      " -16.008    -16.598784 -17.111232 -17.541888 -17.887296 -18.144\n",
+      " -18.308544 -18.377472 -18.347328 -18.214656 -17.976    -17.627904\n",
+      " -17.166912 -16.589568 -15.892416 -15.072    -14.124864 -13.047552\n",
+      " -11.836608 -10.488576  -9.      ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.linspace(-3, 3, 51)\n",
+    "\n",
+    "y = x**3/3+2*x**2-8*x-12\n",
+    "print(y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -660,14 +791,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2c439f15f77a4192b7d00397dbaa958c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x24d22740f10>]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from numpy import exp, cos, pi\n",
+    "%matplotlib ipympl\n",
+    "\n",
+    "t = np.linspace(0, 2, 500, endpoint=False)\n",
+    "x_t = exp(-0.2*t)*cos(20*pi*t)\n",
+    "\n",
+    "plt.figure(1)\n",
+    "plt.plot(t, x_t)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -698,13 +864,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9fec466b132a43dea92157129456b52c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-12-5bd38efa3dc3>:13: RuntimeWarning: divide by zero encountered in log10\n",
+      "  ax.plot_surface(x, y, 20*np.log10(abs(Hz)),cmap='viridis', edgecolor='none');\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -771,21 +960,45 @@
     "# \"Pynting\" på figuren\n",
     "* `title()` Gi figuren en tittel\n",
     "* `xlabel()` Gi x-aksen et navn\n",
-    "* `ylabe()` Gi y-aksen et navn\n",
+    "* `ylabel()` Gi y-aksen et navn\n",
     "* `grid(True/False)` Aktiver/deaktiver rutenett\n",
     "* `xlim() / ylim()` Avgrensing av x- og y-akse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3621c9f99d75457e8d6eb301df05ddbc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.close(2)\n",
+    "plt.figure(2, figsize=(8,6))\n",
+    "plt.plot(t, x_t)\n",
+    "plt.xlabel(\"Tid t (s)\")\n",
+    "plt.ylabel(\"x(t)\")\n",
+    "plt.title(\"Dempet sinusbølge\")\n",
+    "plt.grid(True)\n",
+    "plt.xlim([0, 2]);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -819,14 +1032,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b820eb6b4c24035899abf33cfc83828",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-21-5e05e3194b33>:9: UserWarning: Attempted to set non-positive left xlim on a log-scaled axis.\n",
+      "Invalid limit will be ignored.\n",
+      "  plt.xlim(0, 100000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "plt.close(3)\n",
+    "plt.figure(3, figsize=(8,6))\n",
+    "\n",
+    "\n",
+    "x = np.logspace(0, 5, 1001)\n",
+    "y = 1/x\n",
+    "\n",
+    "plt.semilogx(x, y)\n",
+    "plt.xlim(0, 100000)\n",
+    "plt.grid(True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -841,14 +1089,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cd3f7b4b3c144f8a9c1c35b82b4a882c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x24d26f0b280>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.close(4)\n",
+    "plt.figure(4, figsize=(6,6))\n",
+    "\n",
+    "from numpy import sin\n",
+    "\n",
+    "theta = np.array([pi/2, 7*pi/6, 11*pi/6, pi/2])\n",
+    "\n",
+    "x = cos(theta)\n",
+    "y = sin(theta)\n",
+    "\n",
+    "plt.plot(x, y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -870,15 +1155,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7bd5e04d059b4084a24012377940061d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x24d28052970>]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Kodeeksempel"
+    "plt.close(5)\n",
+    "plt.figure(5, figsize=(10,6))\n",
+    "\n",
+    "theta1 = np.array([pi/2, 7*pi/6, 11*pi/6, pi/2])\n",
+    "\n",
+    "x1 = cos(theta)\n",
+    "y1 = sin(theta)\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.plot(x1, y1)\n",
+    "\n",
+    "theta2 = np.linspace(0, 2*pi, 501)\n",
+    "x2 = cos(theta2)\n",
+    "y2 = sin(theta2)\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.plot(x2,y2)"
    ]
   },
   {
@@ -897,15 +1221,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "381dafd602134331a4bf9f58c9a70185",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x24d291ec610>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Kodeeksempel"
+    "plt.close(6)\n",
+    "plt.figure(6, figsize=(6,6))\n",
+    "\n",
+    "theta1 = np.array([pi/2, 7*pi/6, 11*pi/6, pi/2])\n",
+    "\n",
+    "x1 = cos(theta)\n",
+    "y1 = sin(theta)\n",
+    "plt.plot(x1, y1, label='trekant')\n",
+    "\n",
+    "theta2 = np.linspace(0, 2*pi, 501)\n",
+    "x2 = cos(theta2)\n",
+    "y2 = sin(theta2)\n",
+    "plt.plot(x2,y2, label='sirkel')\n",
+    "\n",
+    "plt.legend(loc='upper right')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Spørsmål?"
    ]
   }
  ],
