--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -9,7 +9,8 @@
     "Ukenummer | Tema | Kommentar\n",
     "---|---|---\n",
     "2 | [Introduksjon](01_Introduksjon.ipynb) | Første undervisningstime - praktisk info m.m.\n",
-    "2 | [Intro til Python](02_Intro%20til%20Python.ipynb) | Andre undervisningstime"
+    "2 | [Intro til Python](02_Intro%20til%20Python.ipynb) | Andre undervisningstime\n",
+    "3 | [Sinussignal](03_Sinussignal.ipynb) | Tema for hele uken"
    ]
   }
  ],
