--- a/03_Sinussignal.ipynb
+++ b/03_Sinussignal.ipynb
@@ -131,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fea81d1c3414759929f7d27b296cb4e",
+       "model_id": "fa2a621d2c3e4eefb098855841dad66c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de8aec44bc5b4b0faa56478dddc25c54",
+       "model_id": "9761fc7ea3a14546986077fd2b8684a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d98a90120e34d81aa5e27ea9c811ef3",
+       "model_id": "a16ba99766e34cbbbd907a1e9433dc0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -244,14 +244,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9bb2584b4384c378691c25b288b2392",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "t = np.linspace(0, 2, 501)\n",
+    "x_t= cos(2*pi*1.5*t)\n",
+    "y_t= cos(2*pi*1.5*t + 2*pi)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(t, x_t)\n",
+    "plt.plot(t, y_t, ':')\n",
+    "plt.grid(True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -280,7 +304,7 @@
     }
    },
    "source": [
-    "## Hvorfor Sinuser?\n",
+    "## Hvorfor Sinusoider?\n",
     "* Få signaler vi møter i virkeligheten vil være rene sinussignal.\n",
     "\n",
     "Men\n",
@@ -319,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -330,7 +354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d97420659cca485f9880ad97633c7d34",
+       "model_id": "5354387fa6f94d889e2bcb3aaede81d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -344,7 +368,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bca8ec88b734231ac3bf8c246c7b52b",
+       "model_id": "a33e4fe3b03644e983b80f901a800f44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,7 +382,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab2d7e86f8f54f2abc5e758d4b84163b",
+       "model_id": "ca95fa43cab1479889dc08a8bc9001de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -509,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -579,7 +603,7 @@
     "      <li>Polarform fra kartesisk form:</li>\n",
     "      </ul>\n",
     "       $$r = \\sqrt{x^2+y^2}$$\n",
-    "       $$\\theta = \\tan \\left(\\frac{x}{y}\\right)$$\n",
+    "       $$\\theta = \\arctan \\left(\\frac{y}{x}\\right)$$\n",
     "        <ul><li>Kartesisk form fra polarform:</li></ul>\n",
     "       $$ x = r\\cdot \\cos(\\theta)$$\n",
     "       $$ y = r\\cdot \\sin(\\theta)$$\n",
@@ -616,14 +640,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.605551275463989\n",
+      "-123.69006752597977\n",
+      "-2.0\n",
+      "-3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = -2\n",
+    "y = -3\n",
+    "\n",
+    "arctan2(y,x)\n",
+    "\n",
+    "z = x + 1j*y\n",
+    "print(abs(z))\n",
+    "print(np.angle(z)/pi*180)\n",
+    "print(np.real(z))\n",
+    "print(np.imag(z))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -638,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -648,7 +694,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26aa74e3554b4c50a672b3d4c67005be",
+       "model_id": "ef7e52d291c94d7eab81c48ad1501d56",
        "version_major": 2,
        "version_minor": 0
       },
@@ -662,7 +708,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ad4b6c3870c4177a263e5202d299019",
+       "model_id": "3b93ca6475e048249a1aa28abf2b9404",
        "version_major": 2,
        "version_minor": 0
       },
@@ -676,7 +722,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3aaf8780860e4c50a6d4d79c7ae53197",
+       "model_id": "2c6edda9e5e94524a901a9d217d3837b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1062,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -1073,7 +1119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9cd8c88c1cfb4734ae6399efcae77330",
+       "model_id": "a4b1f0480f6d4b1a986819c029591603",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1087,7 +1133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14c9153938394755b2671db31747b830",
+       "model_id": "3b0d37a97be14da582231722caccef4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1101,7 +1147,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "366a858ba8ac4bedbd4244372a27821a",
+       "model_id": "b6e8d9b10c2f4ec2a7efe929b15029a1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1240,7 +1286,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e3d1cc522694a878e1c6dabbdf2319c",
+       "model_id": "2af13a2375604484827e094b6f2bbe13",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1254,7 +1300,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8be98cc496294e40bef5633ccdad5293",
+       "model_id": "308ba202c0b44112b0930dcbe5ed1878",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1268,7 +1314,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e56ee9ecee9490585c6b5baf9bbd7f7",
+       "model_id": "28aa7bba579e429b8b3c6882a3e9596c",
        "version_major": 2,
        "version_minor": 0
       },
