--- a/03_Sinussignal.ipynb
+++ b/03_Sinussignal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -131,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa2a621d2c3e4eefb098855841dad66c",
+       "model_id": "0bc695ef67354551bdf03553e8e1e5ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9761fc7ea3a14546986077fd2b8684a8",
+       "model_id": "9a089947f70f4361acacadcc82383ce9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a16ba99766e34cbbbd907a1e9433dc0b",
+       "model_id": "afa586cb17814158bbe1060ff23cdcb7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -254,7 +254,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9bb2584b4384c378691c25b288b2392",
+       "model_id": "4e812462ad2543e88eaea8f0b43714eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,9 +271,9 @@
     "x_t= cos(2*pi*1.5*t)\n",
     "y_t= cos(2*pi*1.5*t + 2*pi)\n",
     "\n",
-    "plt.figure()\n",
-    "plt.plot(t, x_t)\n",
-    "plt.plot(t, y_t, ':')\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(t, x_t, linewidth=3)\n",
+    "plt.plot(t, y_t, 'r:', linewidth=3)\n",
     "plt.grid(True)"
    ]
   },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -354,7 +354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5354387fa6f94d889e2bcb3aaede81d7",
+       "model_id": "ca5737d41dca4a25b4d87982159e60bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -368,7 +368,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a33e4fe3b03644e983b80f901a800f44",
+       "model_id": "48942ff4c02a453b813f542887161ac6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -382,7 +382,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca95fa43cab1479889dc08a8bc9001de",
+       "model_id": "3a5814fc37bf46d1a688cd4633e92383",
        "version_major": 2,
        "version_minor": 0
       },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -635,12 +635,12 @@
     "## Polarform i Python\n",
     "\n",
     "* Modulen `numpy` har en rekke nyttige funksjoner: `abs()`, `angle()`, `real()` og `imag()`.\n",
-    "* Andre nyttige trigonometriske funksjoner i `numpy`: `cos()`, `sin()`, `hypot()`, `arctan2()`."
+    "* Andre nyttige trigonometriske funksjoner i `numpy`: `cos()`, `sin()`, `hypot()`, `arctan2()` og `exp()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -651,24 +651,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.605551275463989\n",
-      "-123.69006752597977\n",
-      "-2.0\n",
-      "-3.0\n"
+      "Vinkel i radianer:  -2.5535900500422257\n",
+      "\n",
+      "Komplekst tall z =  (-2-3j)\n",
+      "Polarkoordinat r:  3.605551275463989\n",
+      "Vinkel i grader:  -123.69006752597977\n",
+      "\n",
+      "Nytt tall z = 3*e^(j0.75*pi)\n",
+      "Reell del:  -2.1213203435596424\n",
+      "Imaginær del:  2.121320343559643\n"
      ]
     }
    ],
    "source": [
+    "# Kartesisk form\n",
+    "\n",
     "x = -2\n",
     "y = -3\n",
+    "# Trigonometrisk funksjon arctan2() kan brukes til å regne ut tan^-1\n",
+    "# (bruk denne istedenfor arctan(), da den ikke håndterer fortegn på noen bra måte.)\n",
+    "print(\"Vinkel i radianer: \", arctan2(x,y))\n",
     "\n",
-    "arctan2(y,x)\n",
+    "# Komplekst tall på kartesisk form\n",
+    "z1 = x + 1j*y\n",
+    "print(\"\\nKomplekst tall z = \", z1)\n",
+    "print(\"Polarkoordinat r: \", abs(z1))\n",
+    "print(\"Vinkel i grader: \", np.angle(z1)/pi*180)\n",
     "\n",
-    "z = x + 1j*y\n",
-    "print(abs(z))\n",
-    "print(np.angle(z)/pi*180)\n",
-    "print(np.real(z))\n",
-    "print(np.imag(z))"
+    "# Komplekst tall på Polarform: ,\n",
+    "print(\"\\nNytt tall z = 3*e^(j0.75*pi)\")\n",
+    "z2 = 3*exp(3j*pi/4)\n",
+    "print(\"Reell del: \", np.real(z2))\n",
+    "print(\"Imaginær del: \", np.imag(z2))"
    ]
   },
   {
@@ -684,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -694,7 +708,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef7e52d291c94d7eab81c48ad1501d56",
+       "model_id": "e84dc7f23c024f79912e4148407bb7e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -708,7 +722,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b93ca6475e048249a1aa28abf2b9404",
+       "model_id": "6fb3cf20535648f1891c7a7d4a1bc094",
        "version_major": 2,
        "version_minor": 0
       },
@@ -722,7 +736,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c6edda9e5e94524a901a9d217d3837b",
+       "model_id": "8ad32812b241425581d562510c47737d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -896,14 +910,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a27d75a768e7436a9518edce23bf1823",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "z = 1*np.exp(2j*pi/8)\n",
+    "n = np.arange(0, 8)\n",
+    "\n",
+    "unitCircle = exp(2j*pi*np.linspace(0, 1, 501))\n",
+    "\n",
+    "z_n = z**n\n",
+    "\n",
+    "\n",
+    "\n",
+    "plt.close(12)\n",
+    "plt.figure(12)\n",
+    "plt.plot(np.real(unitCircle), np.imag(unitCircle), 'r:')\n",
+    "\n",
+    "plt.scatter(np.real(z_n), np.imag(z_n))\n",
+    "plt.axis([-1.1, 1.1, -1.1, 1.1])\n",
+    "\n",
+    "plt.grid(True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -963,7 +1011,7 @@
     "      <li>Cosinus er den relle delen av en roterende vektor.</li>\n",
     "        $$\\cos(\\omega t) = \\mathfrak{R}\\left(e^{j\\omega t}\\right)$$\n",
     "      <li>Sinusinus er den imaginære delen av en roterende vektor.</li>\n",
-    "        $$\\cos(\\omega t) = \\mathfrak{I}\\left(e^{j\\omega t}\\right)$$\n",
+    "        $$\\sin(\\omega t) = \\mathfrak{I}\\left(e^{j\\omega t}\\right)$$\n",
     "    </ul>  \n",
     "    </div>\n",
     "</div> "
@@ -986,7 +1034,7 @@
     "      <br>\n",
     "      <li>Dekomponering av sinussignal til sum av roterende komplekskonjugerte vektorer:</li>\n",
     "        $$\\cos(\\omega t) = \\frac{e^{j\\omega t}+e^{-j\\omega t}}{2}$$\n",
-    "        $$\\cos(\\omega t) = \\frac{e^{j\\omega t}-e^{-j\\omega t}}{2j}$$\n",
+    "        $$\\sin(\\omega t) = \\frac{e^{j\\omega t}-e^{-j\\omega t}}{2j}$$\n",
     "        <li><b><u>Eulers formel</u></b></li>\n",
     "        <br>\n",
     "        <li><i>All frekvensanalyse av signal bygger på denne matematiske dekomponeringen.</i></li>\n",
@@ -1108,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -1119,7 +1167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4b1f0480f6d4b1a986819c029591603",
+       "model_id": "50623d438e484e70b3ef4fdd2e3bca12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1133,7 +1181,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b0d37a97be14da582231722caccef4b",
+       "model_id": "d79d3095c5fc46308cdd56065318515e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1147,7 +1195,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6e8d9b10c2f4ec2a7efe929b15029a1",
+       "model_id": "e939d1b52b3b4b41b2af009f108f7c88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1275,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -1286,7 +1334,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2af13a2375604484827e094b6f2bbe13",
+       "model_id": "c53de99bb9674a329e621ab832cdb799",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1300,7 +1348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "308ba202c0b44112b0930dcbe5ed1878",
+       "model_id": "8baab49c73c045ddb0cc76b29977f598",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1314,7 +1362,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28aa7bba579e429b8b3c6882a3e9596c",
+       "model_id": "4cb3ab403911475da1de352a329e7948",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1327,7 +1375,7 @@
     }
    ],
    "source": [
-    "A = [0.5, 1, 0.5]; omega = [0, pi/6, pi/3]; T =  12;\n",
+    "A = [0.5, 1, 0.5]; omega = [-pi/6, 0, pi/6]; T =  12;\n",
     "demo5(A, omega, T);"
    ]
   },
@@ -1341,9 +1389,11 @@
    "source": [
     "# Oppsummering\n",
     "\n",
-    "* Egenskapene til Sinusbølger, og hvorfor de er relevante.\n",
+    "* Egenskapene til sinusbølger, og hvorfor de er relevante.\n",
     "* Relasjon mellom sinusbølger og komplekse eksponentialer.\n",
-    "* Representasjon av en sinusbølge sin amplitude og fase med en kompleks vektor."
+    "    * Positiv og negativ frekvens.\n",
+    "* Representasjon av en sinusbølge sin amplitude og fase med en kompleks vektor.\n",
+    "* Addisjon av sinusbøler med lik frekvens med bruk av vektoraddisjons-medoden."
    ]
   },
   {
@@ -1354,7 +1404,7 @@
     }
    },
    "source": [
-    "# Spørmsål?"
+    "# Spørsmål?"
    ]
   }
  ],
