Oppdatert oversikt og lagt til lydfil

--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -10,7 +10,8 @@
     "---|---|---\n",
     "2 | [Introduksjon](01_Introduksjon.ipynb) | Første undervisningstime - praktisk info m.m.\n",
     "2 | [Intro til Python](02_Intro%20til%20Python.ipynb) | Andre undervisningstime\n",
-    "3 | [Sinussignal](03_Sinussignal.ipynb) | Tema for hele uken"
+    "3 | [Sinussignal](03_Sinussignal.ipynb) | Tema for hele uken\n",
+    "4 | [Frekvensrepresentasjon](04_Frekvensrepresentasjon.ipynb) | Vil oppdateres for fredagstimen."
    ]
   }
  ],
