--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -11,7 +11,8 @@
     "2 | [Introduksjon](01_Introduksjon.ipynb) | Første undervisningstime - praktisk info m.m.\n",
     "2 | [Intro til Python](02_Intro%20til%20Python.ipynb) | Andre undervisningstime\n",
     "3 | [Sinussignal](03_Sinussignal.ipynb) | Tema for hele uken\n",
-    "4 | [Frekvensrepresentasjon](04_Frekvensrepresentasjon.ipynb) | Vil oppdateres for fredagstimen."
+    "4 | [Frekvensrepresentasjon](04_Frekvensrepresentasjon.ipynb) | Oppdatert tirsdag 2. februar\n",
+    "5 | [Sampling og Aliasing](05_Sampling%20og%20Aliasing.ipynb) | Utvides fredag 5. februar"
    ]
   }
  ],
